fixes on smaller phone

--- a/src/components/BulletElement.css
+++ b/src/components/BulletElement.css
@@ -1,3 +1,11 @@
 .h4 {
     font-size: 15px !important;
 }
+.info-point {
+    height: 7vh;
+}
+@media(max-height: 380px) and (orientation: landscape) {
+    .info-point {
+        height: 15vh
+    }
+}
